# cam_trap_web

./: Cargo.toml  Rocket.toml  settings.json
src/: main.rs
static/: main.css
templates/: index.html.tera  login.html.tera
